@@ -2,6 +2,8 @@ Version 7.44 - not yet released
 * calculations
   - update sprint/league time window to 2 hours (as per OLC and DMSt rules)
   - update OLC League calculation to latest ruleset
+* WaypointDetails
+  - Add pan capability to the waypoint details image
 * tracking
   - xcsoar-cloud-service: rebuild service, new domain cloud.xcsoar.org
 * data files
